Se añadió contenido a la sección principal del archivo index.html, incluyendo un encabezado y una descripción sobre el rol de desarrollador frontend.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,12 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section>
+        <h1>Frontend Developer</h1>
+        <h2>I'm a frontend developer with a passion for creating beautiful and functional websites.</h2>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
