--- a/index.html
+++ b/index.html
@@ -20,9 +20,76 @@
     <main>
       <section>
         <h1>Frontend Developer</h1>
-        <h2>I'm a frontend developer with a passion for creating beautiful and functional websites.</h2>
+        <h2>
+          I'm a frontend developer with a passion for creating beautiful and
+          functional websites.
+        </h2>
+      </section>
+      <section>
+        <article>
+          <h2>Projects</h2>
+          <ul>
+            <li>
+              <a href="https://www.google.com">Project 1</a>
+            </li>
+            <li>
+              <a href="https://www.google.com">Project 2</a>
+            </li>
+            <li>
+              <a href="https://www.google.com">Project 3</a>
+            </li>
+            <li>
+              <a href="https://www.google.com">Project 3</a>
+            </li>
+          </ul>
+        </article>
+        <article>
+          <h2>Work Experience</h2>
+          <h3>roadmad.sh</h3>
+          <p>2020 - 2021</p>
+          <a href="https://roadmad.sh">Visit my profile</a>
+        </article>
+        <article>
+          <h2>Open Source Contributions</h2>
+          <p>2020 - 2021</p>
+          <a href="https://roadmad.sh">Visit my profile</a>
+        </article>
+        <article>
+          <h2>Education</h2>
+          <p>Graduated from the University of Technology</p>
+          <h3>Courses I Took</h3>
+          <ul>
+            <li>
+              <p>2020 - 2021</p>
+              <p>Graduated from the University of Technology</p>
+            </li>
+            <li>
+              <p>2020 - 2021</p>
+              <p>Graduated from the University of Technology</p>
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section>
+        <h2>Reviews from my teachers</h2>
+        <ol>
+          <li>
+            <p>2020 - 2021</p>
+            <p>Graduated from the University of Technology</p>
+          </li>
+          <li>
+            <p>2020 - 2021</p>
+            <p>Graduated from the University of Technology</p>
+          </li>
+          <li>
+            <p>2020 - 2021</p>
+            <p>Graduated from the University of Technology</p>
+          </li>
+        </ol>
       </section>
     </main>
-    <footer></footer>
+    <footer>
+      <p>Copyright 2021 Generic Portfolio</p>
+    </footer>
   </body>
 </html>
