Se actualizó la estructura de las páginas articles.html, contact.html y projects.html, añadiendo secciones principales vacías y un pie de página con derechos de autor.

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -17,7 +17,9 @@
         </ul>
       </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      
+    </main>
+    <footer><p>Copyright 2021 Generic Portfolio</p></footer>
   </body>
 </html>
