--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,7 +17,9 @@
         </ul>
       </nav>
     </header>
-    <main></main>
-    <footer></footer>
+    <main>
+      
+    </main>
+    <footer><p>Copyright 2021 Generic Portfolio</p></footer>
   </body>
 </html>
