Se añadió contenido a las páginas articles.html, contact.html y projects.html.Se actualizó el menú de navegación para mejorar la estructura y la accesibilidad del sitio.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -10,15 +10,59 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="pages/articles.html">Articles</a></li>
-          <li><a href="pages/projects.html">Projects</a></li>
-          <li><a href="pages/contact.html">Contact</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="articles.html">Articles</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      
+      <h1>Projects</h1>
+      <section>
+        <h2>Projects 1</h2>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
+            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
+            animi odio numquam laborum.
+          </p>
+        </article>
+      </section>
+      <section>
+        <h2>Projects 2</h2>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
+            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
+            animi odio numquam laborum.
+          </p>
+        </article>
+      </section>
+      <section>
+        <h2>Projects 3</h2>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
+            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
+            animi odio numquam laborum.
+          </p>
+        </article>
+      </section>
+      <section>
+        <h2>Projects 4</h2>
+        <article>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
+            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
+            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
+            animi odio numquam laborum.
+          </p>
+        </article>
+      </section>
     </main>
     <footer><p>Copyright 2021 Generic Portfolio</p></footer>
   </body>
