--- a/pages/contact.html
+++ b/pages/contact.html
@@ -10,15 +10,28 @@
     <header>
       <nav>
         <ul>
-          <li><a href="index.html">Home</a></li>
-          <li><a href="pages/articles.html">Articles</a></li>
-          <li><a href="pages/projects.html">Projects</a></li>
-          <li><a href="pages/contact.html">Contact</a></li>
+          <li><a href="../index.html">Home</a></li>
+          <li><a href="articles.html">Articles</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      
+      <h1>Contact</h1>
+      <form action="submit">
+        <label for="name">Name</label>
+        <input type="text" id="name" name="name" />
+        <label for="email">Email</label>
+        <input type="email" id="email" name="email" />
+        <label for="select">Select</label>
+        <select name="select" id="select">
+          <option value="Important">Important</option>
+          <option value="Medium">Medium</option>
+          <option value="Low">Low</option>
+        </select>
+        <button type="submit">Submit</button>
+      </form>
     </main>
     <footer><p>Copyright 2021 Generic Portfolio</p></footer>
   </body>
