Se añadió un logotipo en el menú de navegación de las páginas index.html, articles.html, contact.html y projects.html. Además, se simplificó la descripción en la sección principal de index.html.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <header>
       <nav>
         <ul>
+          <li>
+            <a href="index.html"
+              ><img src="assets/icons/logo.svg" alt="logo"
+            /></a>
+          </li>
           <li><a href="index.html">Home</a></li>
           <li><a href="pages/articles.html">Articles</a></li>
           <li><a href="pages/projects.html">Projects</a></li>
@@ -21,8 +26,7 @@
       <section>
         <h1>Frontend Developer</h1>
         <h2>
-          I'm a frontend developer with a passion for creating beautiful and
-          functional websites.
+          I'm a frontend developer creating beautiful and functional websites.
         </h2>
       </section>
       <section>
