--- a/pages/articles.html
+++ b/pages/articles.html
@@ -10,6 +10,11 @@
     <header>
       <nav>
         <ul>
+          <li>
+            <a href="../index.html"
+              ><img src="../assets/icons/logo.svg" alt="logo"
+            /></a>
+          </li>
           <li><a href="../index.html">Home</a></li>
           <li><a href="articles.html">Articles</a></li>
           <li><a href="projects.html">Projects</a></li>
