Se actualizaron los nombres de los proyectos en la sección de Proyectos del archivo index.html. Se mejoró la descripción de la experiencia laboral y las contribuciones de código abierto, así como la información educativa, añadiendo detalles sobre logros y cursos tomados.

--- a/index.html
+++ b/index.html
@@ -35,42 +35,67 @@
           <h2>Projects</h2>
           <ul>
             <li>
-              <a href="https://www.google.com">Project 1</a>
+              <a href="https://www.google.com">HTML Only Portfolio</a>
             </li>
             <li>
-              <a href="https://www.google.com">Project 2</a>
+              <a href="https://www.google.com">Calculator</a>
             </li>
             <li>
-              <a href="https://www.google.com">Project 3</a>
+              <a href="https://www.google.com">Quiz App</a>
             </li>
             <li>
-              <a href="https://www.google.com">Project 3</a>
+              <a href="https://www.google.com">Product landing page</a>
             </li>
           </ul>
         </article>
         <article>
           <h2>Work Experience</h2>
           <h3>roadmad.sh</h3>
-          <p>2020 - 2021</p>
-          <a href="https://roadmad.sh">Visit my profile</a>
+          <p>Solved all the frontend projects</p>
+          <a href="https://github.com/davidrogaci">Visit my profile</a>
         </article>
         <article>
           <h2>Open Source Contributions</h2>
-          <p>2020 - 2021</p>
-          <a href="https://roadmad.sh">Visit my profile</a>
+          <p>
+            Contributed to 50 open source projects. Made my own projects with
+            200 Github Stars.
+          </p>
+          <a href="https://github.com/davidrogaci">Visit my Github Profile</a>
         </article>
         <article>
           <h2>Education</h2>
-          <p>Graduated from the University of Technology</p>
+          <p>
+            Graduated with 3.76 out of 4 CPGA. Won Acme Hackathon. Organized 30
+            sessions.
+          </p>
           <h3>Courses I Took</h3>
           <ul>
             <li>
-              <p>2020 - 2021</p>
-              <p>Graduated from the University of Technology</p>
+              <p>Object Oriented Programming</p>
             </li>
             <li>
-              <p>2020 - 2021</p>
-              <p>Graduated from the University of Technology</p>
+              <p>Data Structures and Algorithms</p>
+            </li>
+            <li>
+              <p>Web Engineering</p>
+            </li>
+            <li>
+              <p>Artificial Intelligence</p>
+            </li>
+            <li>
+              <p>Human Computer Interaction</p>
+            </li>
+            <li>
+              <p>Computer Graphics</p>
+            </li>
+            <li>
+              <p>Database management systems</p>
+            </li>
+            <li>
+              <p>distributed database systems</p>
+            </li>
+            <li>
+              <p>discrect mathematics</p>
             </li>
           </ul>
         </article>
