Se actualizaron las reseñas de profesores en la sección correspondiente del archivo index.html, añadiendo citas destacadas y nombres de los docentes para resaltar la calidad académica del estudiante.

--- a/index.html
+++ b/index.html
@@ -104,16 +104,28 @@
         <h2>Reviews from my teachers</h2>
         <ol>
           <li>
-            <p>2020 - 2021</p>
-            <p>Graduated from the University of Technology</p>
+            <p>
+              "An exceptional student who consistently goes beyond basic
+              requirements. Their ability to solve complex problems and
+              dedication to learning is truly impressive."
+            </p>
+            <h3>Prof. María González, Computer Science Department</h3>
           </li>
           <li>
-            <p>2020 - 2021</p>
-            <p>Graduated from the University of Technology</p>
+            <p>
+              "Their work on the Web Development final project was outstanding.
+              They demonstrated exceptional mastery of frontend technologies and
+              great attention to user experience details."
+            </p>
+            <h3>Dr. Carlos Rodríguez, Web Engineering Professor</h3>
           </li>
           <li>
-            <p>2020 - 2021</p>
-            <p>Graduated from the University of Technology</p>
+            <p>
+              "A brilliant mind with a promising future in software development.
+              Their ability to lead teams and passion for innovation
+              distinguishes them as an exceptional professional."
+            </p>
+            <h3>Dr. Ana Martínez, Software Engineering Program Director</h3>
           </li>
         </ol>
       </section>
