Se actualizaron los enlaces en la sección de Proyectos del archivo index.html, reemplazando las URLs de ejemplo por enlaces reales a los proyectos. También se modificó el enlace al perfil de GitHub para apuntar a la nueva dirección.

--- a/index.html
+++ b/index.html
@@ -35,16 +35,22 @@
           <h2>Projects</h2>
           <ul>
             <li>
-              <a href="https://www.google.com">HTML Only Portfolio</a>
+              <a href="https://www.davidrogaci.dev">HTML Only Portfolio</a>
             </li>
             <li>
-              <a href="https://www.google.com">Calculator</a>
+              <a href="https://calculadora-prestamos-one.vercel.app/"
+                >Calculator</a
+              >
             </li>
             <li>
-              <a href="https://www.google.com">Quiz App</a>
+              <a href="https://ecommerce-rodriguez.vercel.app/"
+                >Sneakers e-commerce site</a
+              >
             </li>
             <li>
-              <a href="https://www.google.com">Product landing page</a>
+              <a href="https://jordan-1-retro-spider.vercel.app/"
+                >Product landing page</a
+              >
             </li>
           </ul>
         </article>
@@ -52,7 +58,7 @@
           <h2>Work Experience</h2>
           <h3>roadmad.sh</h3>
           <p>Solved all the frontend projects</p>
-          <a href="https://github.com/davidrogaci">Visit my profile</a>
+          <a href="roadmap.sh/u/davidrogaci">Visit my profile</a>
         </article>
         <article>
           <h2>Open Source Contributions</h2>
