Se actualizaron los nombres y descripciones de los proyectos en la sección de Proyectos del archivo projects.html, mejorando la claridad y relevancia de cada proyecto. Se añadieron enlaces a los proyectos para facilitar el acceso.

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -26,47 +26,51 @@
     <main>
       <h1>Projects</h1>
       <section>
-        <h2>Projects 1</h2>
+        <h2>HTML Only Portfolio</h2>
         <article>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
-            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
-            animi odio numquam laborum.
+            This is my HTML Only Portfolio, a simple and clean portfolio built
+            with HTML and CSS. It showcases my projects and skills as a frontend
+            developer.
           </p>
+          <a href="https://www.davidrogaci.dev">Visit the project</a>
         </article>
       </section>
       <section>
-        <h2>Projects 2</h2>
+        <h2>Calculator</h2>
         <article>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
-            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
-            animi odio numquam laborum.
+            This is a simple calculator built with HTML, CSS, and JavaScript. It
+            allows you to calculate the total amount of a loan based on the
+            principal, interest rate, and term.
           </p>
+          <a href="https://calculadora-prestamos-one.vercel.app/"
+            >Visit the project</a
+          >
         </article>
       </section>
       <section>
-        <h2>Projects 3</h2>
+        <h2>Sneakers e-commerce site</h2>
         <article>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
-            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
-            animi odio numquam laborum.
+            This is a simple e-commerce site built with React + Vite. It allows
+            you to browse and purchase sneakers.
           </p>
+          <a href="https://ecommerce-rodriguez.vercel.app/"
+            >Visit the project</a
+          >
         </article>
       </section>
       <section>
-        <h2>Projects 4</h2>
+        <h2>Product landing page</h2>
         <article>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
-            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
-            animi odio numquam laborum.
+            This is a simple product landing page built with HTML, CSS, and
+            JavaScript. It showcases a product and allows you to purchase it.
           </p>
+          <a href="https://jordan-1-retro-spider.vercel.app/"
+            >Visit the project</a
+          >
         </article>
       </section>
     </main>
