--- a/pages/articles.html
+++ b/pages/articles.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Generic Portfolio - Articles</title>
+    <title>Generic Portfolio - Reseñas de Clientes</title>
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" href="../assets/icons/logo.svg" />
   </head>
@@ -17,59 +17,69 @@
             /></a>
           </li>
           <li><a href="../index.html">Home</a></li>
-          <li><a href="articles.html">Articles</a></li>
+          <li><a href="articles.html">Reseñas</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <h1>Articles</h1>
+      <h1>Reseñas de Nuestros Clientes</h1>
       <section>
-        <h2>Article 1</h2>
+        <h2>María González - Diseño Web</h2>
         <article>
+          <p class="date">Publicado el 15 de Marzo, 2024</p>
+          <p class="rating">★★★★★</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
-            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
-            animi odio numquam laborum.
+            "¡Increíble experiencia trabajando con este equipo! El diseño de mi
+            sitio web superó todas mis expectativas. La atención al detalle y la
+            comunicación constante hicieron que todo el proceso fuera muy
+            fluido. Definitivamente recomendaría sus servicios a cualquiera que
+            busque un sitio web profesional."
           </p>
         </article>
       </section>
       <section>
-        <h2>Article 2</h2>
+        <h2>Carlos Rodríguez - Desarrollo de App</h2>
         <article>
+          <p class="date">Publicado el 10 de Marzo, 2024</p>
+          <p class="rating">★★★★☆</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
-            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
-            animi odio numquam laborum.
+            "El desarrollo de nuestra aplicación móvil fue un éxito. El equipo
+            demostró un gran conocimiento técnico y supo adaptarse a nuestros
+            requisitos cambiantes. La única razón por la que no doy 5 estrellas
+            es porque hubo algunos retrasos menores en la entrega, pero el
+            resultado final valió la pena."
           </p>
         </article>
       </section>
       <section>
-        <h2>Article 3</h2>
+        <h2>Ana Martínez - Consultoría Digital</h2>
         <article>
+          <p class="date">Publicado el 5 de Marzo, 2025</p>
+          <p class="rating">★★★★★</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
-            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
-            animi odio numquam laborum.
+            "La consultoría digital que recibimos transformó completamente
+            nuestra estrategia online. Los insights y recomendaciones fueron
+            precisos y efectivos. Hemos visto un aumento significativo en
+            nuestro tráfico web y conversiones. ¡Un servicio excepcional!"
           </p>
         </article>
       </section>
       <section>
-        <h2>Article 4</h2>
+        <h2>Juan Pérez - Rediseño de Marca</h2>
         <article>
+          <p class="date">Publicado el 1 de Marzo, 2025</p>
+          <p class="rating">★★★★★</p>
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit
-            temporibus non obcaecati quidem ex quis ducimus iusto perspiciatis
-            quos eius consequuntur repudiandae maxime, nesciunt incidunt iste
-            animi odio numquam laborum.
+            "El proceso de rediseño de nuestra marca fue profesional y
+            meticuloso. El equipo entendió perfectamente nuestra visión y la
+            transformó en una identidad visual coherente y moderna. La nueva
+            imagen ha recibido excelentes comentarios de nuestros clientes."
           </p>
         </article>
       </section>
     </main>
-    <footer><p>Copyright 2021 Generic Portfolio</p></footer>
+    <footer><p>Copyright 2025 Generic Portfolio</p></footer>
   </body>
 </html>
