Se tradujeron los títulos y el contenido de la página articles.html del español al inglés, actualizando las reseñas de clientes y las fechas de publicación. Se mejoró la coherencia del contenido en inglés.

--- a/pages/articles.html
+++ b/pages/articles.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Generic Portfolio - Reseñas de Clientes</title>
+    <title>Generic Portfolio - Customer Reviews</title>
     <link rel="stylesheet" href="../style.css" />
     <link rel="icon" href="../assets/icons/logo.svg" />
   </head>
@@ -17,65 +17,65 @@
             /></a>
           </li>
           <li><a href="../index.html">Home</a></li>
-          <li><a href="articles.html">Reseñas</a></li>
+          <li><a href="articles.html">Reviews</a></li>
           <li><a href="projects.html">Projects</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
     <main>
-      <h1>Reseñas de Nuestros Clientes</h1>
+      <h1>Customer Reviews</h1>
       <section>
-        <h2>María González - Diseño Web</h2>
+        <h2>Maria Gonzalez - Web Design</h2>
         <article>
-          <p class="date">Publicado el 15 de Marzo, 2024</p>
+          <p class="date">Published on March 15, 2025</p>
           <p class="rating">★★★★★</p>
           <p>
-            "¡Increíble experiencia trabajando con este equipo! El diseño de mi
-            sitio web superó todas mis expectativas. La atención al detalle y la
-            comunicación constante hicieron que todo el proceso fuera muy
-            fluido. Definitivamente recomendaría sus servicios a cualquiera que
-            busque un sitio web profesional."
+            "Incredible experience working with this team! The design of my
+            website exceeded all my expectations. The attention to detail and
+            constant communication made the entire process very smooth. I would
+            definitely recommend their services to anyone looking for a
+            professional website."
           </p>
         </article>
       </section>
       <section>
-        <h2>Carlos Rodríguez - Desarrollo de App</h2>
+        <h2>Carlos Rodriguez - App Development</h2>
         <article>
-          <p class="date">Publicado el 10 de Marzo, 2024</p>
+          <p class="date">Published on March 10, 2025</p>
           <p class="rating">★★★★☆</p>
           <p>
-            "El desarrollo de nuestra aplicación móvil fue un éxito. El equipo
-            demostró un gran conocimiento técnico y supo adaptarse a nuestros
-            requisitos cambiantes. La única razón por la que no doy 5 estrellas
-            es porque hubo algunos retrasos menores en la entrega, pero el
-            resultado final valió la pena."
+            "The development of our mobile app was a success. The team
+            demonstrated great technical knowledge and adapted well to our
+            changing requirements. The only reason I'm not giving 5 stars is
+            because there were some minor delays in delivery, but the final
+            result was worth it."
           </p>
         </article>
       </section>
       <section>
-        <h2>Ana Martínez - Consultoría Digital</h2>
+        <h2>Ana Martinez - Digital Consulting</h2>
         <article>
-          <p class="date">Publicado el 5 de Marzo, 2025</p>
+          <p class="date">Published on March 5, 2025</p>
           <p class="rating">★★★★★</p>
           <p>
-            "La consultoría digital que recibimos transformó completamente
-            nuestra estrategia online. Los insights y recomendaciones fueron
-            precisos y efectivos. Hemos visto un aumento significativo en
-            nuestro tráfico web y conversiones. ¡Un servicio excepcional!"
+            "The digital consulting we received completely transformed our
+            online strategy. The insights and recommendations were precise and
+            effective. We have seen a significant increase in our web traffic
+            and conversions. An exceptional service!"
           </p>
         </article>
       </section>
       <section>
-        <h2>Juan Pérez - Rediseño de Marca</h2>
+        <h2>Juan Perez - Brand Redesign</h2>
         <article>
-          <p class="date">Publicado el 1 de Marzo, 2025</p>
+          <p class="date">Published on March 1, 2025</p>
           <p class="rating">★★★★★</p>
           <p>
-            "El proceso de rediseño de nuestra marca fue profesional y
-            meticuloso. El equipo entendió perfectamente nuestra visión y la
-            transformó en una identidad visual coherente y moderna. La nueva
-            imagen ha recibido excelentes comentarios de nuestros clientes."
+            "The brand redesign process was professional and meticulous. The
+            team perfectly understood our vision and transformed it into a
+            coherent and modern visual identity. The new image has received
+            excellent feedback from our clients."
           </p>
         </article>
       </section>
